Tracking Experiments with Local DB

--- a/02-mlflow/05-mflow-model-registry.ipynb
+++ b/02-mlflow/05-mflow-model-registry.ipynb
@@ -23,6 +23,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Understanding How MLFlow saves Data\n",
+    "\n",
+    "MLFlow has two types of stores\n",
+    "\n",
+    "**Backend Store**\n",
+    "- In this store, MLFlow stores metadata information of experiments like parameters, metrics, tags etc\n",
+    "- Bydefault this gets stored in the local filesystem under the name mlruns. In the mlruns file, you will have folder for each experiment. The folder name start with 0 (default experiment) for experiment 1 and if you have two experiments, you will have two folders 0 and 1, these 0 and 1 are experiment ids for the two experiments\n",
+    "- Withing each of these folder you will have a meta.yaml file that contains info about where is the artifact location, the experiment_id, experiment name (for folder 0 experiment name is default) and such\n",
+    "- For each run you create, a unique folder is created in that experiment folder(i.e. folder names with 0 , 1 ...) And inside this run folder, you will have the artifcats folder containing the model, parameters and all\n",
+    "- We can also configure it to store in SQLAlchemy compatible DB (e.g. SQLite, Postgres)\n",
+    "\n",
+    "**Artifacts Store**\n",
+    "- Here MLFlow stores all the artifacts like the dataset used for training, the model itself and other configuration files like conda.yaml, requirements.txt that are needed to run the model\n",
+    "- Again by default this is stored in the local filesystem\n",
+    "- We can also configure it to store this information in remote location like Amazon S3 Bucket"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Tracking Experiments with a Local Database"
    ]
   },
@@ -32,12 +53,18 @@
    "source": [
     "Till now, we have used local files, now we will use local database like sqlite and store the information there\n",
     "\n",
-    "We use the following CLI `mlflow ui --port 8080 --backend-store-uri sqlite:///mlruns.db`"
+    "We use the following CLI `mlflow ui --port 8080 --backend-store-uri sqlite:///mlruns.db`\n",
+    "\n",
+    "For a custom artifact location, we can use\n",
+    "\n",
+    "`mlflow ui --port 8080 --backend-store-uri sqlite:///mlruns.db --default-artifact-root ./artifacts_local`\n",
+    "\n",
+    "The above commands are written assuming you are running it from the mlops-learning folder, as the paths to backend and artifacts is given according to that folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +77,65 @@
    ],
    "source": [
     "# set the following environment variable\n",
+    "# as we are running in 02-mlfow, using the ../mlruns.db\n",
     "%env MLFLOW_TRACKING_URI=sqlite:///../mlruns.db"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "../mlruns.db implies that create / use the sqlite db in the parent folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://127.0.0.1:8080'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import mlflow\n",
+    "\n",
+    "mlflow.set_tracking_uri(\"http://127.0.0.1:8080\")\n",
+    "mlflow.get_tracking_uri()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Experiment: artifact_location='/home/topisano/Desktop/projects/mlops-learning/artifacts_local/0', creation_time=1725110293634, experiment_id='0', last_update_time=1725110293634, lifecycle_stage='active', name='Default', tags={}>]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlflow.search_experiments()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the artifact_location is changed to the location that we have specified"
    ]
   },
   {
@@ -62,49 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024/08/31 17:42:03 INFO mlflow.store.db.utils: Creating initial MLflow database tables...\n",
-      "2024/08/31 17:42:03 INFO mlflow.store.db.utils: Updating database tables\n",
-      "INFO  [alembic.runtime.migration] Context impl SQLiteImpl.\n",
-      "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n",
-      "INFO  [alembic.runtime.migration] Running upgrade  -> 451aebb31d03, add metric step\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 451aebb31d03 -> 90e64c465722, migrate user column to tags\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 90e64c465722 -> 181f10493468, allow nulls for metric values\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 181f10493468 -> df50e92ffc5e, Add Experiment Tags Table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade df50e92ffc5e -> 7ac759974ad8, Update run tags with larger limit\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 7ac759974ad8 -> 89d4b8295536, create latest metrics table\n",
-      "INFO  [89d4b8295536_create_latest_metrics_table_py] Migration complete!\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 89d4b8295536 -> 2b4d017a5e9b, add model registry tables to db\n",
-      "INFO  [2b4d017a5e9b_add_model_registry_tables_to_db_py] Adding registered_models and model_versions tables to database.\n",
-      "INFO  [2b4d017a5e9b_add_model_registry_tables_to_db_py] Migration complete!\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 2b4d017a5e9b -> cfd24bdc0731, Update run status constraint with killed\n",
-      "INFO  [alembic.runtime.migration] Running upgrade cfd24bdc0731 -> 0a8213491aaa, drop_duplicate_killed_constraint\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 0a8213491aaa -> 728d730b5ebd, add registered model tags table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 728d730b5ebd -> 27a6a02d2cf1, add model version tags table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 27a6a02d2cf1 -> 84291f40a231, add run_link to model_version\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 84291f40a231 -> a8c4a736bde6, allow nulls for run_id\n",
-      "INFO  [alembic.runtime.migration] Running upgrade a8c4a736bde6 -> 39d1c3be5f05, add_is_nan_constraint_for_metrics_tables_if_necessary\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 39d1c3be5f05 -> c48cb773bb87, reset_default_value_for_is_nan_in_metrics_table_for_mysql\n",
-      "INFO  [alembic.runtime.migration] Running upgrade c48cb773bb87 -> bd07f7e963c5, create index on run_uuid\n",
-      "INFO  [alembic.runtime.migration] Running upgrade bd07f7e963c5 -> 0c779009ac13, add deleted_time field to runs table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 0c779009ac13 -> cc1f77228345, change param value length to 500\n",
-      "INFO  [alembic.runtime.migration] Running upgrade cc1f77228345 -> 97727af70f4d, Add creation_time and last_update_time to experiments table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 97727af70f4d -> 3500859a5d39, Add Model Aliases table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 3500859a5d39 -> 7f2a7d5fae7d, add datasets inputs input_tags tables\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 7f2a7d5fae7d -> 2d6e25af4d3e, increase max param val length from 500 to 8000\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 2d6e25af4d3e -> acf3f17fdcc7, add storage location field to model versions\n",
-      "INFO  [alembic.runtime.migration] Running upgrade acf3f17fdcc7 -> 867495a8f9d4, add trace tables\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 867495a8f9d4 -> 5b0e9adcef9c, add cascade deletion to trace tables foreign keys\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 5b0e9adcef9c -> 4465047574b1, increase max dataset schema size\n",
-      "INFO  [alembic.runtime.migration] Context impl SQLiteImpl.\n",
-      "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n",
-      "2024/08/31 17:42:04 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'c368a3304fbc4779876802a6e2700b53', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n"
+      "2024/08/31 18:49:20 INFO mlflow.tracking.fluent: Experiment with name 'mysql-experiment' does not exist. Creating a new experiment.\n",
+      "2024/08/31 18:49:20 INFO mlflow.utils.autologging_utils: Created MLflow autologging run with ID 'e37d1f74668c41c98c6da5674a07abc4', which will track hyperparameters, performance metrics, model artifacts, and lineage information for the current sklearn workflow\n",
+      "2024/08/31 18:49:22 INFO mlflow.tracking._tracking_service.client: 🏃 View run bald-snail-320 at: http://127.0.0.1:8080/#/experiments/1/runs/e37d1f74668c41c98c6da5674a07abc4.\n",
+      "2024/08/31 18:49:22 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:8080/#/experiments/1.\n"
      ]
     }
    ],
@@ -116,7 +169,8 @@
     "# from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "mlflow.create_experiment('mysql-experiment-4')\n",
+    "mlflow.set_experiment('mysql-experiment')\n",
+    "\n",
     "mlflow.sklearn.autolog()\n",
     "\n",
     "db = load_diabetes()\n",
@@ -132,45 +186,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(111, 10)"
+       "[<Experiment: artifact_location='/home/topisano/Desktop/projects/mlops-learning/artifacts_local/1', creation_time=1725110360508, experiment_id='1', last_update_time=1725110360508, lifecycle_stage='active', name='mysql-experiment', tags={}>,\n",
+       " <Experiment: artifact_location='/home/topisano/Desktop/projects/mlops-learning/artifacts_local/0', creation_time=1725110293634, experiment_id='0', last_update_time=1725110293634, lifecycle_stage='active', name='Default', tags={}>]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'pandas' has no attribute 'read_dict'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_dict\u001b[49m(db)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'read_dict'"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.from_(db)"
+    "mlflow.search_experiments()"
    ]
   },
   {
@@ -178,28 +210,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "eval_data = X_test\n",
-    "eval_data[\"label\"] = y_test\n",
-    "eval_data[\"predictions\"] = predictions\n",
-    "\n",
-    "# Create the PandasDataset for use in mlflow evaluate\n",
-    "pd_dataset = mlflow.data.from_pandas(\n",
-    "    eval_data, predictions=\"predictions\", targets=\"label\"\n",
-    ")\n",
-    "\n",
-    "mlflow.set_experiment(\"Diabetes\")\n",
-    "\n",
-    "# Log the Dataset, model, and execute an evaluation run using the configured Dataset\n",
-    "with mlflow.start_run() as run:\n",
-    "    mlflow.log_input(pd_dataset, context=\"training\")\n",
-    "\n",
-    "    mlflow.sklearn.log_model(\n",
-    "        artifact_path=\"white-wine-xgb\", xgb_model=model, input_example=X_test\n",
-    "    )\n",
-    "\n",
-    "    result = mlflow.evaluate(data=pd_dataset, predictions=None, model_type=\"classifier\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
