created aliases to registered models

--- a/02-mlflow/05-mflow-model-registry.ipynb
+++ b/02-mlflow/05-mflow-model-registry.ipynb
@@ -154,7 +154,7 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.datasets import load_diabetes\n",
-    "# from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import root_mean_squared_error\n",
     "\n",
@@ -794,10 +794,261 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fetching the Model By its Alias\n",
+    "\n",
+    "Let's say I want to fetch the champion model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(50.66368785767995)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_name = \"sk-learn-linear-reg\"\n",
+    "alias = \"champion\"\n",
+    "\n",
+    "champion_version = mlflow.pyfunc.load_model(f\"models:/{model_name}@{alias}\")\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "root_mean_squared_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's say We create another Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "mlflow.set_experiment('mysql-experiment-lr')\n",
+    "\n",
+    "db = load_diabetes()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(db.data, db.target)\n",
+    "\n",
+    "# Create and train models.\n",
+    "rf = RandomForestRegressor()\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "# Use the model to make predictions on the test dataset.\n",
+    "predictions = rf.predict(X_test)\n",
+    "\n",
+    "rmse = root_mean_squared_error(y_test, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/08/31 20:04:59 INFO mlflow.tracking._tracking_service.client: 🏃 View run smiling-auk-757 at: http://127.0.0.1:8080/#/experiments/1/runs/4cb243cf9ed14ef59cdfb87147416572.\n",
+      "2024/08/31 20:04:59 INFO mlflow.tracking._tracking_service.client: 🧪 View experiment at: http://127.0.0.1:8080/#/experiments/1.\n"
+     ]
+    }
+   ],
+   "source": [
+    "signature = infer_signature(X_test, rf.predict(X_test))\n",
+    "\n",
+    "# Log MLflow entities\n",
+    "with mlflow.start_run() as run:\n",
+    "    mlflow.sklearn.log_model(rf, artifact_path=\"sklearn-model\", signature=signature)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--Model--\n",
+      "name: RandomForestRegression\n",
+      "aliases: {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Register model name in the model registry\n",
+    "name = \"RandomForestRegression\"\n",
+    "\n",
+    "# create an empty registry model\n",
+    "client.create_registered_model(name)\n",
+    "\n",
+    "# get that empty registered model\n",
+    "model = client.get_registered_model(name)\n",
+    "\n",
+    "print_model_info(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4cb243cf9ed14ef59cdfb87147416572'"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_active_run = mlflow.last_active_run()\n",
+    "run_id = last_active_run.info.run_id\n",
+    "run_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/08/31 20:07:11 INFO mlflow.store.model_registry.abstract_store: Waiting up to 300 seconds for model version to finish creation. Model name: RandomForestRegression, version 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<ModelVersion: aliases=[], creation_timestamp=1725115031221, current_stage='None', description='', last_updated_timestamp=1725115031221, name='RandomForestRegression', run_id='4cb243cf9ed14ef59cdfb87147416572', run_link='', source='runs:/4cb243cf9ed14ef59cdfb87147416572/sklearn-model', status='READY', status_message='', tags={}, user_id='', version='1'>"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a new version of the rf model under the registered model name\n",
+    "model_uri = \"runs:/{}/sklearn-model\".format(run.info.run_id)\n",
+    "\n",
+    "mv = client.create_model_version(name, model_uri, run.info.run_id)\n",
+    "\n",
+    "mv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now this will be our Challenger Model. So we will start by setting the Alias to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here, we set our model as Champion\n",
+    "client.set_registered_model_alias(\"RandomForestRegression\", \"challenger\", '1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we will test this model, if it performs well will move it to production alias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(55.243454440852624)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_name = \"RandomForestRegression\"\n",
+    "model_version = 1\n",
+    "\n",
+    "model = mlflow.pyfunc.load_model(model_uri=f\"models:/{model_name}/{model_version}\")\n",
+    "\n",
+    "y_pred = model.predict(X_test)\n",
+    "root_mean_squared_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assuming that it has performed well, we wanna push this to production"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We create a tag saying it passed the validation\n",
+    "client.set_model_version_tag(\"RandomForestRegression\", \"1\", \"validation_status\", \"approved\")\n",
+    "\n",
+    "# # then we set the alias to produciton, saying its the new production model\n",
+    "# client.set_registered_model_alias(\"RandomForestRegression\", \"champion\", '1')\n",
+    "\n",
+    "# # then we set the old production model to archived\n",
+    "# client.set_registered_model_alias(\"sk-learn-linear-reg\", \"archived\", '1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For More information Refer here:\n",
+    "\n",
+    "https://mlflow.org/docs/latest/python_api/mlflow.client.html#module-mlflow.client\n",
+    "\n",
+    "https://mlflow.org/docs/latest/model-registry.html#concepts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
